--- a/src/pages/HomePage/components/AddTransaction/addTransaction.module.css
+++ b/src/pages/HomePage/components/AddTransaction/addTransaction.module.css
@@ -3,15 +3,32 @@
     border-radius: 10px;
     margin: 20px; 
     padding: 20px;
-    flex: 1;
+    flex: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     color: rgb(83, 83, 83);
+    -webkit-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
+    -moz-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
+    box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
 }
 .input{
     padding: 10px;
-    border-radius: 2px;
+    border-radius: 5px;
     border-width: 0.2px;
     margin-bottom: 10px;
+}
+.button{
+    padding: 10px;
+    border-radius: 5px;
+    border-width: 0.2px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    background: linear-gradient(90deg, #192ac4a8, #9e9fdf98);
+    color: white;
+    font-weight: bold;
+}
+.button:hover{
+    background-color: red;
+    cursor: pointer;
 }
