--- a/src/components/TransactionCard/transactionCard.module.css
+++ b/src/components/TransactionCard/transactionCard.module.css
@@ -1,18 +1,6 @@
-.list {
-    display: flex; 
-    flex: 3;
+.container{
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    border: 1px solid rgba(133, 130, 130, 0.39);
-    border-radius: 10px;
-    margin: 20px; 
-    padding: 20px;
-    color: rgb(83, 83, 83);
-    overflow-y: auto;
-    max-height: 317px;
-    -webkit-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
-    -moz-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
-    box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
 }
 .card {
     background-color: #fff;
@@ -42,6 +30,18 @@
     border: 2px solid #dc3545;
 }
  /* Buton */ 
+ .editButton {
+    background-color: rgb(142, 51, 175);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+.editButton:hover{
+    background-color: rgb(140, 21, 238);
+}
 .deleteButton {
     background-color: #dc3545;
     color: #fff;
