--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -23,7 +23,7 @@
       );
       overflow: auto;
 }
-h1{
+.header{
     text-align: center;
 }
 /* Form */
@@ -43,7 +43,6 @@ h1{
     -webkit-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
     -moz-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
     box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
-   
 }
 .img{
     width: 200px;
