--- a/src/utils/modal/modal.module.css
+++ b/src/utils/modal/modal.module.css
@@ -1,10 +1,10 @@
 .add{  
-    border: 1px solid rgba(133, 130, 130, 0.39);
-    border-radius: 10px;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border: 1px solid rgba(133, 130, 130, 0.39);
+    border-radius: 10px;
+    padding: 20px;
     color: rgb(83, 83, 83);
     -webkit-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
     -moz-box-shadow: 0px 0px 34px -2px rgba(5,0,5,1);
@@ -13,7 +13,7 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400;
+    width: 400px;
     background-color: white;
 }
 .input{
